--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>480</height>
+    <width>480</width>
+    <height>320</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <widget class="QPushButton" name="btnShutter">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>380</y>
-      <width>201</width>
+      <x>130</x>
+      <y>230</y>
+      <width>111</width>
       <height>51</height>
      </rect>
     </property>
@@ -31,8 +31,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>380</y>
-      <width>281</width>
+      <y>230</y>
+      <width>111</width>
       <height>51</height>
      </rect>
     </property>
@@ -44,9 +44,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
-      <width>541</width>
-      <height>351</height>
+      <y>40</y>
+      <width>231</width>
+      <height>161</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -58,24 +58,24 @@
     <widget class="QLabel" name="labelImg">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>10</y>
-       <width>521</width>
-       <height>331</height>
+       <x>0</x>
+       <y>0</y>
+       <width>231</width>
+       <height>161</height>
       </rect>
      </property>
      <property name="text">
-      <string>Hello World!</string>
+      <string/>
      </property>
     </widget>
    </widget>
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>250</x>
       <y>10</y>
-      <width>231</width>
-      <height>351</height>
+      <width>221</width>
+      <height>301</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -91,7 +91,7 @@
         <x>10</x>
         <y>10</y>
         <width>201</width>
-        <height>301</height>
+        <height>251</height>
        </rect>
       </property>
       <layout class="QFormLayout" name="formLayout">
@@ -294,8 +294,8 @@
    <widget class="QCheckBox" name="checkboxLed">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>410</y>
+      <x>160</x>
+      <y>290</y>
       <width>71</width>
       <height>22</height>
      </rect>
