--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -88,10 +88,10 @@
      <widget class="QWidget" name="formLayoutWidget">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>10</y>
-        <width>201</width>
-        <height>251</height>
+        <x>-1</x>
+        <y>0</y>
+        <width>221</width>
+        <height>271</height>
        </rect>
       </property>
       <layout class="QFormLayout" name="formLayout">
@@ -157,9 +157,6 @@
           <string>Shutter speed</string>
          </property>
         </widget>
-       </item>
-       <item row="8" column="1">
-        <widget class="QSpinBox" name="spinboxShutterSpeed"/>
        </item>
        <item row="0" column="1">
         <widget class="QComboBox" name="comboboxIso">
@@ -242,6 +239,105 @@
          <item>
           <property name="text">
            <string>10</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="8" column="1">
+        <widget class="QComboBox" name="comboboxShutterSpeed">
+         <item>
+          <property name="text">
+           <string>1/8000</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1/4000</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1/2000</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1/1000</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1/500</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1/250</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1/125</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1/60</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1/30</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1/15</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1/8</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1/4</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>0.5</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>2</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>4</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>8</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>15</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>30</string>
           </property>
          </item>
         </widget>
