--- a/stylesheet.qss
+++ b/stylesheet.qss
@@ -1,3 +1,42 @@
 QPushButton {
     background: yellow;
 }
+
+QComboBox {
+    min-height: 2em;
+}
+
+QSlider {
+    height: 30px;
+}
+
+QSlider::groove:horizontal {
+    border: 1px solid #999999;
+    background: white;
+    height: 25px;
+    border-radius: 4px;
+}
+
+QSlider::sub-page:horizontal {
+    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #66e, stop: 1 #bbf);
+    background: qlineargradient(x1: 0, y1: 0.2, x2: 1, y2: 1, stop: 0 #bbf, stop: 1 #55f);
+    border: 1px solid #777;
+    height: 10px;
+    border-radius:4px;
+}
+
+QSlider::add-page:horizontal {
+    background: #fff;
+    border: 1px solid #777;
+    height: 10px;
+    border-radius: 4px;
+}
+
+QSlider::handle:horizontal {
+    background: qlineargradient(x1:0, y1:0, x2:1, y2:1, stop:0 #b4b4b4, stop:1 #8f8f8f);
+    border: 1px solid #5c5c5c;
+    width: 25px;
+    margin-top: -2px;
+    margin-bottom: -2px;
+    border-radius: 8px;
+}
