--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -697,6 +697,51 @@
      </item>
     </layout>
    </widget>
+   <widget class="QWidget" name="tabInfo">
+    <attribute name="title">
+     <string>Info</string>
+    </attribute>
+    <layout class="QGridLayout" name="gridLayout_5">
+     <item row="0" column="0">
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QLabel" name="labelIp">
+         <property name="text">
+          <string>System IP:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="labelCommit">
+         <property name="text">
+          <string>Project version (commit):</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="labelRealCamera">
+         <property name="text">
+          <string>Using real camera:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="ImgViewer" name="widgetImgViewer" native="true">
    <property name="geometry">
